rename the project: scheme

--- a/scheme.cabal
+++ b/scheme.cabal
@@ -11,7 +11,7 @@ cabal-version:      3.0
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:               lisp-interpretor
+name:               scheme
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
@@ -57,7 +57,7 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
-executable lisp-interpretor
+executable scheme
     -- Import common warning flags.
     import:           warnings
 
